Controller Unit Tests Have been Added